# PaperBanana_Modified

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
agents/: critic_agent.py  planner_agent.py  polish_agent.py  retriever_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
configs/: model_config.template.yaml
tools/vtracer_converter/: convert.py
utils/: generation_utils.py  paperviz_processor.py
