[project]
name = "paperbanana-modified"
version = "0.1.0"
description = "Modified PaperBanana - AI-powered scientific diagram generation with third-party API support, token optimization, and SVG export"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.65.0",
    "google-auth>=2.48.0",
    "streamlit>=1.54.0",
    "aiofiles>=25.1.0",
    "pillow>=11.0.0",
    "numpy>=2.4.0",
    "tqdm>=4.67.0",
    "json-repair>=0.58.0",
    "anthropic>=0.84.0",
    "openai>=2.24.0",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = []
